test/config/mtls/destinationrule.yaml
# Copyright 2019 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "mtls-services"
  namespace: "serving-tests"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    # Do not use mTLS for metric ports as tests fail when istio injection is disabled
    # for services. - e.g TestServiceToServiceCallViaActivator/*-disabled
    # autoscaler, which has istio-proxy, fails to access without these config.
    PortTrafficPolicy:
      port: 9090
      tls:
        mode: DISABLE
      port: 9091
      tls:
        mode: DISABLE
